fix: fix sonar qube issues